tests/errors/vector-index-known-length-out-of-range.ari
fn main() -> i64 {
    var values: Vec[i64] = [1, 2];
    values.truncate(1);
    return values[1];
}
